--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,10 +2,13 @@
 <html>
   <head>
     <title><%= title %></title>
+    <%= csrf_meta_tag %>
+    <%= javascript_include_tag :defaults %>
     <%= render 'layouts/stylesheets' %>
   </head>
   <body>
     <div class="container">
+
       <%= render 'layouts/header' %>
       <% flash.each do |key, value| %>
         <div class="flash <%= key %>"><%= value %></div>
